syntax = "proto3";

package grpcgateway.pb;

import "resource-aggregate/pb/events.proto";
import "grpc-gateway/pb/devices.proto";
option go_package = "github.com/plgd-dev/hub/v2/grpc-gateway/pb;pb";

message GetEventsRequest {
	repeated string device_id_filter = 1;
	// format {deviceID}{href}. eg "ae424c58-e517-4494-6de7-583536c48213/oic/d"
	repeated string http_resource_id_filter = 2 [deprecated = true];
	// filter events with timestamp > than given value
	int64 timestamp_filter = 3;
	repeated ResourceIdFilter resource_id_filter = 4; // New resource ID filter. For HTTP requests, use it multiple times as a query parameter like "resourceIdFilter={deviceID}{href}".

	/*
	// event filter is to be added in the future

	enum Event {
		REGISTERED = 0;
		UNREGISTERED = 1;
		DEVICE_METADATA_UPDATED = 4;
		DEVICE_METADATA_UPDATE_PENDING = 5;
		RESOURCE_PUBLISHED = 6;
		RESOURCE_UNPUBLISHED = 7;
		RESOURCE_UPDATE_PENDING = 8;
		RESOURCE_UPDATED = 9;
		RESOURCE_RETRIEVE_PENDING = 10;
		RESOURCE_RETRIEVED = 11;
		RESOURCE_DELETE_PENDING = 12;
		RESOURCE_DELETED = 13;
		RESOURCE_CREATE_PENDING = 14;
		RESOURCE_CREATED = 15;
		RESOURCE_CHANGED = 16;
	}
	repeated Event event_filter = 3;
	*/


}

message GetEventsResponse {
	oneof type {
		resourceaggregate.pb.ResourceLinksPublished resource_links_published = 1;
		resourceaggregate.pb.ResourceLinksUnpublished resource_links_unpublished = 2;
		resourceaggregate.pb.ResourceLinksSnapshotTaken resource_links_snapshot_taken = 3;
		resourceaggregate.pb.ResourceChanged resource_changed = 4;
		resourceaggregate.pb.ResourceUpdatePending resource_update_pending = 5;
		resourceaggregate.pb.ResourceUpdated resource_updated = 6;
		resourceaggregate.pb.ResourceRetrievePending resource_retrieve_pending = 7;
		resourceaggregate.pb.ResourceRetrieved resource_retrieved = 8;
		resourceaggregate.pb.ResourceDeletePending resource_delete_pending = 9;
		resourceaggregate.pb.ResourceDeleted resource_deleted = 10;
		resourceaggregate.pb.ResourceCreatePending resource_create_pending = 11;
		resourceaggregate.pb.ResourceCreated resource_created = 12;
		resourceaggregate.pb.ResourceStateSnapshotTaken resource_state_snapshot_taken = 13;
		resourceaggregate.pb.DeviceMetadataUpdatePending device_metadata_update_pending = 14;
		resourceaggregate.pb.DeviceMetadataUpdated device_metadata_updated = 15;
		resourceaggregate.pb.DeviceMetadataSnapshotTaken device_metadata_snapshot_taken = 16;
	}
}